<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"

        android:hint="@string/valtxemail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"

        android:hint="@string/valtxtpassword"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"

        android:hint="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:hint="@string/valtxtadd"
        android:text="Button"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="418dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="153dp"
        android:layout_height="28dp"
        android:hint="@string/valtxtiniciar"
        android:text="TextView"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="79dp" />

</androidx.constraintlayout.widget.ConstraintLayout>